injectable/tests/ui/unknown_attribute.stderr
error: unknown injectable attribute: `bad_attribute`
 --> tests/ui/unknown_attribute.rs
  |
  | #[injectable(bad_attribute)]
  |              ^^^^^^^^^^^^^
